# sortomatic

./: .gitignore  DockerFile  Dockerfile  Dockerfile.bak  docker-compose.yaml  pyproject.toml  pyrefly.toml  requirements.txt  start_dev.sh  watch-restart.sh
.agent/rules/: main.md
sample/: head-index.json
sortomatic/: cli.py  demo.py  web.py
sortomatic/config/: filetypes.yaml  settings.yaml
sortomatic/core/: bridge.py  config.py  database.py  metrics.py  resources.py  scanner.py  service.py  types.py
sortomatic/core/pipeline/: manager.py
sortomatic/core/pipeline/passes/: categorization.py  hashing.py
sortomatic/l8n/: strings.py
sortomatic/themes/: app.css
sortomatic/ui/: main.py  style.py  styles.py  theme.py
sortomatic/ui/assets/css/: atoms.css  global.css  molecules.css  organisms.css
sortomatic/ui/components/atoms/: __init__.py  badges.py  buttons.py  cards.py  containers.py  dangerous_buttons.py  feedback.py  file_tree.py  icons.py  inputs.py  plots.py  progress_bar.py  responsive_splitter.py  separators.py
sortomatic/ui/components/atoms/inputs/: date_pickers.py  search_bars.py  selects.py  sliders.py  toggles.py
sortomatic/ui/components/atoms/special/: copy_button.py  histograms.py
sortomatic/ui/components/layout/: smart_split.py
sortomatic/ui/components/molecules/: __init__.py  badges.py  cards.py  charts.py  controls.py  file_rows.py  file_tree.py  filters.py  headers.py  lists.py  loaders.py  menus.py  rows.py  scan_controls.py  status_bars.py  theme_selectors.py
sortomatic/ui/components/organisms/: __init__.py  bars.py  cards.py  log_terminal.py  scans.py  skeleton.py  terminals.py  thumbnails.py  viewers.py
sortomatic/ui/themes/: solarized.py  sortomatic.yaml
sortomatic/utils/: formatters.py  logger.py
tests/: conftest.py  generate_chaos.py
tests/integration/: test_cli.py
tests/pipeline/: test_scan_category.py  test_scan_hash.py  test_scan_index.py
tests/unit/: test_config.py
