[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sortomatic"
version = "0.1.0"
description = "The elegant file organizer."
dependencies = [
    "typer[all]",
    "peewee",
    "rich",
    "pyyaml",
    "filetype",
    "ImageHash",
    "Pillow",
    "pyacoustid",
    "humanize",
    "xxhash",
    "nicegui",
    "psutil"
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock"
]

[project.scripts]
# This magic line creates the 'sortomatic' command in your shell
sortomatic = "sortomatic.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sortomatic = ["config/*.yaml"]

[tool.pyrefly]
pythonPath = "/home/etoile/Projects/Server/Sortomatic/.venv/bin/python"
venvPath = "/home/etoile/Projects/Server/Sortomatic"
venv = ".venv"
extraPaths = ["/home/etoile/Projects/Server/Sortomatic/.venv/lib/python3.14/site-packages"]
pythonVersion = "3.14"
typeCheckingMode = "basic"